# careers-gpt

./: .gitignore  main.py  prompt_message.py  pyproject.toml  streamlit_app.py
agent/: __init__.py
data/: __init__.py  data_service.py  database.py  db_models.py  init_database.py
data/vanna/: __init__.py  vanna_ai.py
data/vanna/chroma/: chroma.sqlite3
data/vanna/setup/: flask.py  training.py
models/: __init__.py  cv_models.py  job_models.py  news_models.py  review_models.py
plugins/: __init__.py  company_review_plugin.py  cv_plugin.py  job_plugin.py  search_plugin.py
resources/engineering/: about_me.jinja  cv_doc.jinja  education.jinja  languages.jinja  other_sections.jinja  personal_details.jinja  settings.jinja  skills.jinja  work_experience.jinja
resources/output/: sampleTEX.tex
service/: web_page_service.py
services/: __init__.py  company_review_service.py  duckduckgo_service.py  latex_service.py  pdf_service.py
tools/: __init__.py  streamlit_tools.py
