[project]
name = "careers-gpt"
version = "0.1.1"
description = "Careers and job application assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.2",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "semantic-kernel>=1.30.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
